--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -39,7 +39,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Neha Kulkarni. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
